# article-smart-home-use-cases

./: .gitignore  CheatSheet.md  README.md
FirstUseCase_Energy/: README.md
FirstUseCase_Energy/Gazebo/plugins/: CMakeLists.txt  ColorChangeEMQXPlugin.cc  ColorChangeEMQXPlugin.hh
FirstUseCase_Energy/Gazebo/worlds/: newWorld
FirstUseCase_Energy/Kafka/: constants.py  kafkaProcessing.py
FirstUseCase_Energy/Kafka/Connectors/: connectorSink.json  connectorSource.json  connectorSourceUser.json
FirstUseCase_Energy/RealtimeDataGen/: csv_proc.py
SecondUseCase_Temperature/: README.md
SecondUseCase_Temperature/DataAnalysis/: constant_time_gen.py  graph_generator.py  graph_mixer.py  results_processing.py  temperature_processing.py
SecondUseCase_Temperature/DataAnalysis/ConstantTime/: APR.csv  FEV.csv  JAN.csv  MAR.csv
SecondUseCase_Temperature/DataAnalysis/ConstantTimeUpdated/: bigroomAPR.csv  bigroomFEV.csv  bigroomJAN.csv  bigroomMAR.csv  smallroomAPR.csv  smallroomFEV.csv  smallroomJAN.csv  smallroomMAR.csv  smallroomwindowAPR.csv  smallroomwindowFEV.csv  smallroomwindowJAN.csv  smallroomwindowMAR.csv
SecondUseCase_Temperature/DataAnalysis/RealTimeUpdated/: bigroomAPRUpdated.csv  bigroomFEVUpdated.csv  bigroomJANUpdated.csv  bigroomMARUpdated.csv  smallroomAPRUpdated.csv  smallroomFEVUpdated.csv  smallroomJANUpdated.csv  smallroomMARUpdated.csv  (+4 more)
SecondUseCase_Temperature/RealTimeDataGen/: temperature_realtime_gen.py  temperature_realtime_gen_mqtt.py
SecondUseCase_Temperature/Simulation/: dataset.csv  generate_temperature_streams.py  threeRooms.e2d
(+33 files in other folders)
